--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,17 +6,19 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/SM-Post/Post.Cmd/Post.Cmd.Api/bin/Debug/net6.0/Post.Cmd.Api.dll",
             "args": [],
             "cwd": "${workspaceFolder}/SM-Post/Post.Cmd/Post.Cmd.Api",
             "stopAtEntry": false,
+            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
                 "action": "openExternally",
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "ASPNETCORE_URLS" : "http://localhost:5010"
+                "ASPNETCORE_URLS": "http://localhost:5010"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
@@ -30,17 +29,19 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/SM-Post/Post.Query/Post.Query.Api/bin/Debug/net6.0/Post.Query.Api.dll",
             "args": [],
             "cwd": "${workspaceFolder}/SM-Post/Post.Query/Post.Query.Api",
             "stopAtEntry": false,
+            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
                 "action": "openExternally",
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "ASPNETCORE_URLS" : "http://localhost:5011"
+                "ASPNETCORE_URLS": "http://localhost:5011"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
