--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/MyWebApp.csproj",
+                "${workspaceFolder}/SM-Post/Post.Cmd/Post.Cmd.Api/Post.Cmd.Api.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/MyWebApp.csproj",
+                "${workspaceFolder}/SM-Post/Post.Cmd/Post.Cmd.Api/Post.Cmd.Api.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -32,9 +32,8 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/MyWebApp.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "--project",
+                "${workspaceFolder}/SM-Post/Post.Cmd/Post.Cmd.Api/Post.Cmd.Api.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
