--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
@@ -6,12 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=sa;Password=strongSaPassword"
-  },
-  "ConsumerConfig": {
-    "GroupId": "SM_Consumer",
-    "BootstrapServers": "localhost:9092",
-    "EnableAutoCommit": false,
-    "AutoOffsetReset": "Earliest"
+    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=SMUser;Password=SmPA$$06500"
   }
 }
