--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=SocialMedia;User Id=SMUser;Password=SmPA$$06500"
+    "SqlServer": "Server=localhost; Database=SocialMedia; Trusted_Connection=true; TrustServerCertificate=true;"
   }
 }
