90. Postgres Read DB

--- a/SM-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
+++ b/SM-Post/Post.Query/Post.Query.Infrastructure/Post.Query.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0"/>
     <PackageReference Include="Confluent.Kafka" Version="1.8.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.2"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.5"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Post.Query.Domain\Post.Query.Domain.csproj"/>
