--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,7 @@
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
             },
             "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development",
+                "ASPNETCORE_ENVIRONMENT": "Development.PostgreSQL",
                 "ASPNETCORE_URLS": "http://localhost:5011",
                 "KAFKA_TOPIC": "SocialMediaPostEvents"
             },
