90. Postgres Read DB

--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.PostgreSQL.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.Development.PostgreSQL.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "host=localhost;database=postgres;user id=postgres;password=postgresPsw"
+    "SqlServer": "host=localhost;database=postgres;user id=postgres;password=postgres"
   },
   "ConsumerConfig": {
     "GroupId": "SM_Consumer",
